<resources>
    <string name="app_name">FireloQ</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>


    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_logs">Logs</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_an_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign up</string>
    <string name="already_a_member">Already a member?</string>
    <string name="full_name">Full Name</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="street">Street</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="gender_prompt">Gender</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_gun">Add New Gun</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="add">Add</string>
    <string name="serial_number">Serial Number</string>
    <string name="registration_number">Registration Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="registration_date">Registration Date</string>
    <string name="fireloq_isn_t_syncing_because_bluetooth_is_off">FireloQ isn\'t syncing because bluetooth is off.</string>
    <string name="fireloq_logo">FireloQ Logo</string>
    <string name="retrieve_password">Retrieve Password</string>
    <string name="submit">Submit</string>
    <string name="modify_profile_details">Modify Profile Details</string>
    <string name="firstname_lastname">FirstName LastName</string>
    <string name="firstname_lastname_fireloq_com">firstname.lastname@fireloq.com</string>
    <string name="user_address">User Address</string>
    <string name="license_expiry_date">License Expiry Date</string>
    <string name="license_number">License Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="landline_number">Landline Number</string>
    <string name="ltopf_id_no">LTOPF ID No.</string>
    <string name="permit_number">Permit Number</string>
</resources>
