<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp">

    <TextView
        android:id="@+id/tv_addGunHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_gun"
        android:textSize="24sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tl_fullname"
        android:layout_alignStart="@id/tl_fullname"
        android:layout_marginTop="25dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tx_make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_addGunHeading"
            android:hint="@string/manufacturer" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tl_make"
        android:layout_alignStart="@id/tl_make"
        android:layout_marginTop="0dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tx_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/model" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_serial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tl_model"
        android:layout_alignStart="@id/tl_model"
        android:layout_marginTop="0dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tx_serial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/serial_number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_regNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tl_serial"
        android:layout_alignStart="@id/tl_model"
        android:layout_marginTop="0dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tx_regNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_regDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tl_regNumber"
        android:layout_alignStart="@id/tl_regNumber"
        android:layout_marginTop="0dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tx_regDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:editable="false"
            android:ems="10"
            android:hint="@string/registration_date" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_expDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tl_regDate"
        android:layout_alignStart="@id/tl_regDate"
        android:layout_marginTop="0dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tx_expDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:editable="false"
            android:ems="10"
            android:hint="@string/expiry_date" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bt_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tl_expDate"
        android:layout_alignEnd="@id/tl_expDate"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorAccentDark"
        android:text="@string/add"
        android:textColor="#FFF"
        android:textSize="18sp" />

</RelativeLayout>